# aula

./: .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  PROVIDERS.md  README.md  RELEASE_CHECKLIST.md  example.py  example_mitid.py  prek.toml  pyproject.toml  release.py  review_output.json
.claude/: settings.json  settings.local.json
.claude/skills/aula-widget-provider/: SKILL.md
.claude/skills/aula-widget-provider/references/: code-patterns.md
.claude/skills/widget-vue-extract/: SKILL.md
.desloppify/: query.json  state-python.json  state-python.json.bak
.github/workflows/: ci.yml  publish.yml
docs/: aula-authentication.md  code-review-report.md
docs/plans/: 2026-02-26-widget-namespace-refactor.md
src/aula/: __init__.py  agent_skill.py  api_client.py  auth_flow.py  cli.py  cli_provider.py  config.py  const.py  http.py  http_httpx.py  models.py  token_storage.py
src/aula/auth/: __init__.py  _utils.py  browser_client.py  exceptions.py  mitid_client.py  srp.py
src/aula/models/: __init__.py  appointment.py  auto_reply.py  base.py  calendar_event.py  child.py  comment.py  consent.py  daily_overview.py  document.py  easyiq_homework.py  group.py  institution.py  institution_profile.py  library.py  main_group.py  meebook_weekplan.py  message.py  message_folder.py  message_thread.py  momo_huskeliste.py  mu_task.py  mu_weekly_letter.py  notification.py  notification_settings.py  pickup_responsible.py  post.py  presence.py  presence_registration.py  presence_template.py  profile.py  profile_context.py  profile_master_data.py  profile_picture.py  profile_reference.py  vacation_registration.py  widget.py
src/aula/plugins/: __init__.py  base.py  http.py
src/aula/plugins/providers/: __init__.py  biblioteket.py  minuddannelse.py
src/aula/utils/: __init__.py  download.py  html.py  json.py  output.py  table.py  widget_vue_extract.py
src/aula/widgets/: __init__.py  base.py  biblioteket.py  client.py  minuddannelse_opgaver.py
tests/: conftest.py  test_api_client.py  test_auth_flow.py  test_auth_utils.py  test_cli_provider.py  test_config.py  test_http.py  test_http_client.py  test_models.py  test_models_base.py  test_models_extended.py  test_provider_discovery.py  test_provider_registry.py  test_token_storage.py  test_utils_html.py  test_widgets_client.py
tests/auth/: test__utils.py
tests/models/: test_appointment.py  test_base.py  test_calendar_event.py  test_child.py  test_comment.py  test_daily_overview.py  test_easyiq_homework.py  test_group.py  test_institution_profile.py  test_library.py  test_main_group.py  test_message.py  test_message_folder.py  test_mu_task.py  test_mu_weekly_letter.py  test_notification.py  test_post.py  test_presence.py  test_presence_registration.py  test_presence_template.py  test_profile_reference.py
tests/utils/: test_download.py  test_html.py  test_json.py  test_output.py  test_table.py  test_widget_vue_extract.py
