[project]
name = "aula"
version = "0.1.0"
description = "Python API wrapper for Aula."
readme = "README.md"
authors = [
    { name = "Nick Nissen", email = "nickknissen@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "click>=8.0",
    "html2text>=2025.4.15",
    "qrcode>=8.0",
    "pycryptodome>=3.20.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
cli = ["python-dotenv>=1.0.0"]
rich = ["rich"]

[project.scripts]
aula = "aula.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
