[project]
name = "aula"
version = "0.1.0"
description = "Python API wrapper for Aula."
readme = "README.md"
authors = [
    { name = "Nick Nissen", email = "nickknissen@gmail.com" }
]
license = "MIT"
keywords = ["aula", "danish", "school", "api", "mitid", "async"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "click>=8.0",
    "html2text>=2025.4.15",
    "qrcode>=8.0",
    "pycryptodome>=3.20.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
cli = ["python-dotenv>=1.0.0"]
rich = ["rich"]

[project.scripts]
aula = "aula.cli:cli"

[project.urls]
Homepage = "https://github.com/nickknissen/aula"
Repository = "https://github.com/nickknissen/aula"
Issues = "https://github.com/nickknissen/aula/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "LOG"]

[tool.pytest.ini_options]
addopts = "--cov=aula --cov-report=term-missing"

[tool.coverage.run]
source = ["aula"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
